Fix incompatibility with Magento 2.1

--- a/view/frontend/templates/event-trigger.phtml
+++ b/view/frontend/templates/event-trigger.phtml
@@ -11,8 +11,8 @@
     {
         "[data-role=buzzi-product-view]": {
             "Buzzi_PublishProductView/js/event-trigger": {
-                "event_type": "<?= $block->escapeJs($block->getEventType()) ?>",
-                "product_sku": "<?= $block->escapeJs($block->getProductSku()) ?>"
+                "event_type": "<?= $block->escapeJsQuote($block->getEventType(), "\"") ?>",
+                "product_sku": "<?= $block->escapeJsQuote($block->getProductSku(), "\"") ?>"
             }
         }
     }
